--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/home/turbe/Documents/commons-csv-1.6/commons-csv-1.6.jar"/>
+	<classpathentry kind="lib" path="/home/lea/Bureau/ProjetS6/commons-csv-1.6/commons-csv-1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
